SERVER-20130 Fix decl. that shadows parameter in Strategy::writeOp()

The declaration of "request" was shadowing the third parameter of
Strategy::writeOp().